<resources>
    <string name="app_name">Mortgage2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="purchase_price">Purchase price:($)</string>
    <string name="down_payment">Down payment:(%)</string>
    <string name="mortgage_term">Mortgage term:(y)</string>
    <string name="interest_rate">Interest rate:(%)</string>
    <string name="property_tax">Property tax:($/y)</string>
    <string name="property_insurance">Property insurance:($/y)</string>
    <string name="first_payment">First payment date:</string>
    <string name="calculate">Calculate</string>
    <string name="save">Save</string>
    <string name="total_monthly">Total monthly payment:</string>
    <string name="total">Total payment:</string>
    <string name="payoff_date">Pay-off date:</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="save_success">Save successfully!</string>
    <string name="zero">0.00</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="years">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

</resources>